# opengl-playground

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  readme.txt  toolchain-mingw.cmake  vcpkg.json  vcpkg_old
assets/models/shot/: longshot.mtl  shot.mtl
assets/models/tie2/: bland-tie.mtl
assets/various/: gamecontrollerdb.txt
include/glad/: glad.c  glad.h
include/stb/: stb_image.cpp
src/: CMakeCache.txt  Makefile  OpenGLPlayground  cmake_install.cmake  main.cpp
src/camera/: camera.cpp  camera.h
src/engine/: engine.cpp  engine.h  settings.h
src/engine/audio/: audio-manager.cpp  audio-manager.h
src/engine/camera/: camera.cpp  camera.h
src/engine/helpers/: file-helper.cpp
src/engine/input-manager/: input-manager.cpp  input-manager.h  raw-input-manager.h
src/engine/logging/: ext-std-log.h
src/engine/metrics/: debug-stats.h  stat.h
src/engine/models/: asset-manager.cpp  asset-manager.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h
src/engine/net-transport/: cli-transp.cpp  cli-transp.h  client-transport.cpp  client-transport.h  serv-transp.cpp  serv-transp.h  server-transport.cpp  server-transport.h
src/engine/networking/: client-logic.cpp  client-transport.cpp  client-transport.h  networking.cpp  networking.h  server-logic.cpp  server-logic.h  server-transport.cpp  server-transport.h  shared-strucs.h
src/engine/rendering/: i-scene-rendererable.h  render-list.h  renderer.cpp  renderer.h
src/engine/rendering/materials/: material.h  model-material.cpp  model-material.h
src/engine/rendering/sky/: sky.cpp  sky.h
src/engine/rendering/terrain/: chunk-generator.h  chunk-handler.cpp  chunk-handler.h  chunk-structs.h  i-terrain-handler.h
src/engine/shaders/: blur.frag  blur.vert  con-trail.frag  con-trail.vert  death-explosion.frag  death-explosion.vert  drive-plume.frag  drive-plume.vert  grass.frag  grass.vert  hitbox.frag  hitbox.vert  model.frag  model.vert  screen.frag  screen.vert  shader.h  terrain.frag  terrain.vert
src/engine/systems/: i-gameplay-system.h  system-structs.h
src/engine/systems/replay/: replay-driver.cpp  replay-driver.h
src/engine/window/: window.cpp  window.h
src/game/game-world/: game-world.cpp  game-world.h
src/game/networking/interpolator/: interpolator.cpp  interpolator.h
src/game/networking/network-bridge/: netw-bridg.cpp  netw-bridg.h  network-bridge.cpp  network-bridge.h  shared-strucs.h
src/game/rendering/flight/: con-trail.cpp  con-trail.h  drive-plume.cpp  drive-plume.h
src/game/rendering/grass/: grass.cpp  grass.h
src/game/rendering/materials/: game-material.h  hitbox-material.cpp  hitbox-material.h  model-material.cpp  model-material.h  terrain-material.cpp  terrain-material.h
src/game/rendering/terrain/: fbm-noise.cpp  fbm-noise.h  flat-chunk-generator.cpp  flat-chunk-generator.h  terrain-config.h  terrain-handler.cpp  terrain-handler.h
src/game/rendering/vfx/: death-explosion.cpp  death-explosion.h
src/game/spawner/: spawner.cpp  spawner.h
src/game/systems/: blending-system.cpp  blending-system.h  camera-system.cpp  camera-system.h  homing-system.cpp  homing-system.h  npc-system.cpp  npc-system.h  physics-system.cpp  physics-system.h  pi-history-system.cpp  pi-history-system.h  player-system.cpp  player-system.h  shot-system.cpp  shot-system.h  system-order.h  system-structs.h  terrain-system.cpp  terrain-system.h
src/game/systems/input/: input-system.cpp  input-system.h
src/game/systems/networking/: network-input-consume-system.cpp  network-input-consume-system.h  network-input-distribution-system.cpp  network-input-distribution-system.h  network-merge-system.cpp  network-merge-system.h  network-poll-system.cpp  network-poll-system.h  network-reconcile-system.cpp  network-reconcile-system.h  network-state-distribution-system.cpp  network-state-distribution-system.h
src/helpers/: file-helper.cpp  file-helper.h
src/input-manager/: input-manager.cpp
src/models/: asset-manager.cpp  asset-manager.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h
src/networking/: client-logic.cpp  client-logic.h  networking.cpp  networking.h  server-logic.cpp  server-logic.h  shared-strucs.h
src/rendering/: renderer.cpp  renderer.h
src/rendering/materials/: hitbox-material.h
src/rendering/sky/: sky.cpp  sky.h
src/shaders/: blur.frag  hitbox.frag  model.frag  model.vert  shader.h
src/systems/: npc-system.cpp  npc-system.h  physics-system.cpp  physics-system.h  player-system.cpp  player-system.h  shot-system.cpp  shot-system.h
src/window/: window.cpp  window.h
